# mkvpriority

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  config.toml  entrypoint.py  main.py  mkvpriority.py  mkvpriority.sh  pyproject.toml
.github/workflows/: publish.yaml  pytest.yaml
mkvpriority/: __init__.py  entrypoint.py  main.py
src/mkvpriority/: __init__.py  entrypoint.py  main.py
tests/: test_main.py
