[project]
name = "mkvpriority"
version = "1.2.1"
description = "Automatically Prioritize Audio/Subtitle Tracks in MKV Files"
license = { text = "MIT" }
authors = [{ name = "Ken Sible", email = "ksible@outlook.com" }]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.2",
    "apscheduler>=3.11.1",
    "requests>=2.32.5",
    "pycountry>=24.6.1",
]

[dependency-groups]
dev = ["ruff>=0.14.8", "mypy>=1.19.0", "pytest>=9.0.2"]

[project.urls]
homepage = "https://github.com/kennethsible/mkvpriority"

[project.scripts]
mkvpriority = "mkvpriority.main:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"
