[project]
name = "mkvpriority"
version = "1.3.0"
description = "Automatically Prioritize Audio/Subtitle Tracks in MKV Files"
license = { text = "MIT" }
authors = [{ name = "Ken Sible", email = "ksible@outlook.com" }]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.3",
    "apscheduler>=3.11.2",
    "requests>=2.32.5",
    "pycountry>=26.2.16",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "types-aiofiles",
    "types-requests",
]

[project.urls]
homepage = "https://github.com/kennethsible/mkvpriority"

[project.scripts]
mkvpriority = "mkvpriority.main:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
strict = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"
